--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="get_demo">
-        <div class="blank_rect" contenteditable="true">
+        <div class="blank_rect" contenteditable="false">
             <!-- <a href=""><img src="Rectangle 1012.svg" alt="rectangle"></a> -->
             <!-- Carousel starts here -->
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
