--- a/index.html
+++ b/index.html
@@ -116,17 +116,21 @@
     <!-- <div class="back"></div> -->
     <div class="uutt">
      <img src="./ii/sec2/sec2 bg.svg"></img>
+  
  
      <div class="afsheen">
-     <img src="./ii/sec2/verify new leads.svg"></img>
+     <!-- <img src="./ii/sec2/verify new leads.svg"></img> -->
+     <span>verify new leads</span>
     </div>
     </div>
 
     <div class="get_kyc_verified">
     <img src="./ii/sec3/sec3 bg.svg"></img>
+    <!-- <span>get kyc verified</span> -->
 
     <div class="yaya">
-    <img src="./ii/sec3/get kyc verified leads.svg"></img>
+    <!-- <img src="./ii/sec3/get kyc verified leads.svg"></img>  -->
+    <span>get kyc verified</span>
     </div>
     </div>
 
